--- a/src/employeedashboard/EmployeeDashboard.fxml
+++ b/src/employeedashboard/EmployeeDashboard.fxml
@@ -206,7 +206,7 @@
         </AnchorPane>
       </content>
     </Tab>
-    <Tab text="Logs">
+   <!-- <Tab text="Logs">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
           <children>
@@ -214,6 +214,6 @@
           </children>
         </AnchorPane>
       </content>
-    </Tab>
+    </Tab>-->
   </tabs>
 </TabPane>
