--- a/src/animalList/AnimalList.fxml
+++ b/src/animalList/AnimalList.fxml
@@ -8,14 +8,15 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="animalList.AnimalListController">
   <children>
-    <TextField layoutX="27.0" layoutY="25.0" promptText="Search..." />
-    <Button layoutX="224.0" layoutY="25.0" mnemonicParsing="false" text="Go" />
-    <ChoiceBox layoutX="94.0" layoutY="81.0" prefWidth="150.0" />
-    <Label layoutX="27.0" layoutY="86.0" text="Filter By:" />
-    <Button layoutX="264.0" layoutY="81.0" mnemonicParsing="false" text="Apply Filter" />
+    <TextField fx:id="searchTxtFld" layoutX="300.0" layoutY="82.0" promptText="Search..." />
+    <ChoiceBox fx:id="filterChoiceBox" layoutX="125.0" layoutY="82.0" prefWidth="150.0" />
+    <Label layoutX="53.0" layoutY="86.0" text="Filter By:" />
+    <Button layoutX="472.0" layoutY="82.0" mnemonicParsing="false" onAction="#applyFilter" text="Apply Filter" />
     <Pane layoutX="30.0" layoutY="128.0" prefHeight="217.0" prefWidth="541.0">
       <children>
         <TableView fx:id="animalsTableView" layoutX="17.0" layoutY="14.0" prefHeight="200.0" prefWidth="508.0">
@@ -27,8 +28,13 @@
         </TableView>
       </children>
     </Pane>
-    <Button fx:id="returnToMain" layoutX="341.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToMainMenu" text="Return to Main Menu" />
+    <Button fx:id="returnToMain" layoutX="380.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToMainMenu" text="Return to Main Menu" />
     <Button fx:id="selectedAnimalButton" layoutX="356.0" layoutY="353.0" mnemonicParsing="false" onAction="#goToAnimalProfile" text="Go to Selected Animal's Page" />
     <Button fx:id="editAnimalButton" layoutX="68.0" layoutY="353.0" mnemonicParsing="false" onAction="#createAnimal" text="Create an Animal Profile" />
+      <Text layoutX="76.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Looking for a New Friend">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
   </children>
 </AnchorPane>
