--- a/src/login/LoginStyle.css
+++ b/src/login/LoginStyle.css
@@ -1,5 +1,5 @@
 #Pane {
-  -fx-background-image: url("https://cdn2.thedogapi.com/images/qBYpfkZr1.jpg");
+  -fx-background-image: url("animal adoption logo.png");
   -fx-background-size: contain;
   -fx-scale-x: -1;
 }
