--- a/src/adoptionConfirmationPage/confirmPage.fxml
+++ b/src/adoptionConfirmationPage/confirmPage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adoptionConfirmationPage.ConfirmPage">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../mainCSS.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adoptionConfirmationPage.ConfirmPage">
   <children>
     <AnchorPane layoutX="-1.0" prefHeight="403.0" prefWidth="600.0">
       <children>
