--- a/src/customerquestionconfirmation/customerQuestionConfirmation.fxml
+++ b/src/customerquestionconfirmation/customerQuestionConfirmation.fxml
@@ -5,9 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane
- maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="customerquestionconfirmation.ConfirmationController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../mainCSS.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="customerquestionconfirmation.ConfirmationController">
    <children>
       <Button layoutX="247.0" layoutY="288.0" mnemonicParsing="false" onAction="#onActionBackToMain" text="Back to Main" />
       <Label layoutX="211.0" layoutY="51.0" text="Your question" textAlignment="CENTER">
