--- a/src/volunteerApplicationPage/volunteerApplication.fxml
+++ b/src/volunteerApplicationPage/volunteerApplication.fxml
@@ -9,7 +9,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
   prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171"
   xmlns:fx="http://javafx.com/fxml/1"
-  fx:controller="volunteerApplicationPage.volunteerAppController">
+  fx:controller="volunteerApplicationPage.VolunteerAppController">
   <children>
     <Label layoutX="24.0" layoutY="66.0" text="Name:"/>
     <Label layoutX="234.0" layoutY="66.0" prefHeight="21.0" prefWidth="35.0" text="Age:"/>
