--- a/src/volunteerApplicationPage/volunteerSuccess.fxml
+++ b/src/volunteerApplicationPage/volunteerSuccess.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="volunteerApplicationPage.volunteerAppController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="volunteerApplicationPage.VolunteerAppController">
   <children>
     <TextArea fx:id="txtFappSuccess" editable="false" layoutX="72.0" layoutY="162.0" prefHeight="116.0" prefWidth="456.0" text="Thank you for submitting an application to volunteer at this Adoption Center. We appreciate your desire to help all the animals at our center! We will respond to your application soon and reach out to you as soon as we can. " wrapText="true" />
     <Button fx:id="btnReturnFromVolApp" layoutX="219.0" layoutY="318.0" mnemonicParsing="false" onAction="#goBackToCustomerScreen" text="Return to Main Menu" />
