--- a/src/employeedashboard/EmployeeDashboard.fxml
+++ b/src/employeedashboard/EmployeeDashboard.fxml
@@ -59,11 +59,7 @@
                         <ListView fx:id="unanwQuestionList" layoutX="16.0" layoutY="37.0" prefHeight="274.0" prefWidth="569.0" />
                         <TextField fx:id="answerQuestionTxtBox" alignment="TOP_LEFT" layoutX="17.0" layoutY="323.0" prefHeight="38.0" prefWidth="407.0" promptText="Type response here" />
                         <Button fx:id="answerBtn" layoutX="463.0" layoutY="324.0" mnemonicParsing="false" onAction="#answerQuestion" prefHeight="37.0" prefWidth="100.0" text="Answer" />
-                        <Label layoutX="197.0" layoutY="5.0" text="Unanswered Questions">
-                          <font>
-                            <Font size="18.0" />
-                          </font>
-                        </Label>
+                        <Label layoutX="240.0" layoutY="14.0" text="Unanswered Questions" />
                       </children>
                     </AnchorPane>
                   </content>
