--- a/src/recordLog/recordLogPage.fxml
+++ b/src/recordLog/recordLogPage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="lblEnterHrs" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="recordLog.RecordLogsController">
+<AnchorPane fx:id="anchorPaneRecLogs" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="recordLog.RecordLogsController">
   <children>
     <Label layoutX="143.0" layoutY="159.0" text="Enter Hours:">
          <font>
