--- a/src/viewevents/ViewEvents.fxml
+++ b/src/viewevents/ViewEvents.fxml
@@ -5,13 +5,13 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="viewevents.ViewEventsController">
+<AnchorPane fx:id="viewEventsPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="viewevents.ViewEventsController">
   <children>
-    <Button fx:id="btnGoBack" layoutX="79.0" layoutY="217.0" mnemonicParsing="false" onAction="#goBack" text="Go Back" />
-    <Label fx:id="lblTop" layoutX="52.0" layoutY="119.0" text="To the right are our" />
-    <Label fx:id="lblBottom" layoutX="67.0" layoutY="140.0" text="current events!" />
+    <Button fx:id="btnGoBack" layoutX="109.0" layoutY="248.0" mnemonicParsing="false" onAction="#goBack" text="Go Back" />
+    <Label fx:id="lblTop" layoutX="87.0" layoutY="21.0" text="To the right are our" />
+    <Label fx:id="lblBottom" layoutX="100.0" layoutY="38.0" text="current events!" />
     <ListView fx:id="listViewEvents" layoutX="256.0" layoutY="21.0" prefHeight="358.0" prefWidth="330.0" />
-    <Button fx:id="addEventBtn" layoutX="23.0" layoutY="290.0" mnemonicParsing="false" onAction="#addEvent" text="Add Event" />
-    <Button fx:id="editEventBtn" layoutX="149.0" layoutY="290.0" mnemonicParsing="false" onAction="#editEvent" text="Edit Event" />
+    <Button fx:id="addEventBtn" layoutX="104.0" layoutY="126.0" mnemonicParsing="false" onAction="#addEvent" text="Add Event" />
+    <Button fx:id="editEventBtn" layoutX="105.0" layoutY="188.0" mnemonicParsing="false" onAction="#editEvent" text="Edit Event" />
   </children>
 </AnchorPane>
