--- a/src/adoptionPage/AdoptionPage.fxml
+++ b/src/adoptionPage/AdoptionPage.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="452.0" prefWidth="352.0" stylesheets="@../mainCSS.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adoptionPage.AdoptionPageController">
+<AnchorPane fx:id="anchorPaneAdopt" prefHeight="452.0" prefWidth="352.0" stylesheets="@../mainCSS.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adoptionPage.AdoptionPageController">
   <children>
     <Button fx:id="returnBtn" layoutX="48.0" layoutY="401.0" mnemonicParsing="false" onAction="#returnToMenu" text="Go Back" />
     <GridPane layoutX="42.0" layoutY="120.0" prefHeight="97.0" prefWidth="330.0">
